Fix chrome rendering, center self image on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -120,7 +120,7 @@ $header-background: $black;
 
 .section.header {
     display: grid;
-    grid-template-columns: auto auto 1fr;
+    grid-template-columns: auto auto 1fr auto;
     background-color: $header-background;
     color: $header-foreground;
     padding-top: 1rem;
@@ -134,7 +134,6 @@ $header-background: $black;
 
 .section.header .logo {
     grid-area: 1 / 1 / 1 / 2;
-    justify-content: left;
     margin-right: 1rem;
 }
 
@@ -145,9 +144,8 @@ $header-background: $black;
 }
 
 .section.header .search {
-    grid-area: 1 / 3 / 1 / 4;
+    grid-area: 1 / 4 / 1 / 5;
     position: relative;
-    justify-content: right;
 }
 
 .section.header .search #search-input {
@@ -301,12 +299,21 @@ $header-background: $black;
 
 /* About */
 .self-image {
-    float: right;
-    margin: {
-        left: 1.25em;
-        bottom: 1.25em;
-    }
+    display: block;
+    text-align: center;
+    margin: 1.25em;
+}
+
+.self-image img {
     border-radius: 1rem;
+}
+
+@media screen and (min-width: 480px) {
+    .self-image {
+        display: inline;
+        margin-left: 1.25em;
+        float: right;
+    }
 }
 
 /* Blog section */
